src/test/deca/context/invalid/created/wrongTypes/methodsCall/method_OBJECT_e_BOOLEAN_g.deca
// Description:
//      Appel d'une methode qui attend un parametre OBJECT avec un BOOLEAN
// Resultats:
//      Erreur contexte Ligne 12 : Contextual error, the parameters given don't respect the method signature

class A {
    void f(A a){}
}

{
    A a = new A();
    a.f(true);
}